--- a/hyperapp/rc/source_file_unit.resources.yaml
+++ b/hyperapp/rc/source_file_unit.resources.yaml
@@ -1,6 +1,9 @@
 import:
+- builtin_service:mosaic
 - builtin_service:resource_module_factory
 - legacy_type.builtin:python_module
+- legacy_type.rc:source_dep
+- legacy_type.rc:module_deps
 
 definitions:
 
@@ -9,4 +12,7 @@ definitions:
     module_name: source_file_unit
     file_name: source_file_unit.dyn.py
     import_list:
+      services.mosaic: builtin_service:mosaic
       services.resource_module_factory: builtin_service:resource_module_factory
+      htypes.rc.source_dep: legacy_type.rc:source_dep
+      htypes.rc.module_deps: legacy_type.rc:module_deps
