--- a/hyperapp/rc/source_file_unit.resources.yaml
+++ b/hyperapp/rc/source_file_unit.resources.yaml
@@ -4,6 +4,7 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.rc:source_dep
 - legacy_type.rc:module_deps
+- rc.import_task:import_task.module
 
 definitions:
 
@@ -12,7 +13,9 @@ definitions:
     module_name: source_file_unit
     file_name: source_file_unit.dyn.py
     import_list:
-      services.mosaic: builtin_service:mosaic
-      services.resource_module_factory: builtin_service:resource_module_factory
+      htypes.builtin.python_module: legacy_type.builtin:python_module
       htypes.rc.source_dep: legacy_type.rc:source_dep
       htypes.rc.module_deps: legacy_type.rc:module_deps
+      services.mosaic: builtin_service:mosaic
+      services.resource_module_factory: builtin_service:resource_module_factory
+      code.import_task: rc.import_task:import_task.module
