--- a/hyperapp/rc/rc.resources.yaml
+++ b/hyperapp/rc/rc.resources.yaml
@@ -2,6 +2,7 @@ import:
 - builtin_service:hyperapp_dir
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
+- rc.process_pool:process_pool.module
 - rc.source_collector_task:source_collector_task.module
 
 definitions:
@@ -13,6 +14,7 @@ definitions:
     import_list:
       services.hyperapp_dir: builtin_service:hyperapp_dir
       code.source_collector_task: rc.source_collector_task:source_collector_task.module
+      code.process_pool: rc.process_pool:process_pool.module
 
   compile_resources:
     _type: legacy_type.builtin:attribute
