--- a/hyperapp/rc/import_task.resources.yaml
+++ b/hyperapp/rc/import_task.resources.yaml
@@ -3,6 +3,7 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.builtin:import_rec
 - legacy_type.import_discoverer:import_discoverer
+- legacy_type.import_discoverer:using_incomplete_object
 - legacy_type.import_recorder:import_recorder
 - legacy_type.import_recorder:resource
 - rc.driver:driver.module
@@ -15,6 +16,7 @@ definitions:
     file_name: import_task.dyn.py
     import_list:
       htypes.import_discoverer.import_discoverer: legacy_type.import_discoverer:import_discoverer
+      htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
       htypes.import_recorder.import_recorder: legacy_type.import_recorder:import_recorder
       htypes.import_recorder.resource: legacy_type.import_recorder:resource
       htypes.builtin.import_rec: legacy_type.builtin:import_rec
