--- a/hyperapp/common/dyn_code_registry.resources.yaml
+++ b/hyperapp/common/dyn_code_registry.resources.yaml
@@ -1,10 +1,10 @@
 import:
 - common.mark:mark.module
-- builtin_service:association_reg
-- builtin_service:mosaic
-- builtin_service:pyobj_creg
-- builtin_service:web
-- builtin_service:types
+- builtins:association_reg.service
+- builtins:mosaic.service
+- builtins:pyobj_creg.service
+- builtins:web.service
+- builtins:types.service
 - legacy_type.builtin:attribute
 - legacy_type.code_registry:constructor
 - legacy_type.builtin:python_module
@@ -18,8 +18,8 @@ definitions:
     import_list:
       code.mark: common.mark:mark.module
       htypes.code_registry.constructor: legacy_type.code_registry:constructor
-      services.association_reg: builtin_service:association_reg
-      services.mosaic: builtin_service:mosaic
-      services.pyobj_creg: builtin_service:pyobj_creg
-      services.web: builtin_service:web
-      services.types: builtin_service:types
+      services.association_reg: builtins:association_reg.service
+      services.mosaic: builtins:mosaic.service
+      services.pyobj_creg: builtins:pyobj_creg.service
+      services.web: builtins:web.service
+      services.types: builtins:types.service
