--- a/hyperapp/rc/driver.resources.yaml
+++ b/hyperapp/rc/driver.resources.yaml
@@ -1,6 +1,6 @@
 import:
-- builtin_service:mosaic
-- builtin_service:pyobj_creg
+- builtins:mosaic.service
+- builtins:pyobj_creg.service
 - legacy_type.builtin:python_module
 - legacy_type.inspect:attr
 - legacy_type.inspect:fn_attr
@@ -19,6 +19,6 @@ definitions:
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.generator_fn_attr: legacy_type.inspect:generator_fn_attr
       htypes.inspect.imported_module_info: legacy_type.inspect:imported_module_info
-      services.mosaic: builtin_service:mosaic
-      services.pyobj_creg: builtin_service:pyobj_creg
+      services.mosaic: builtins:mosaic.service
+      services.pyobj_creg: builtins:pyobj_creg.service
       code.constants: resource.constants:constants.module
