--- a/hyperapp/rc/import_recorder.resources.yaml
+++ b/hyperapp/rc/import_recorder.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- builtin_service:pyobj_creg
+- builtins:pyobj_creg.service
 - legacy_type.builtin:attribute
 - legacy_type.import_recorder:import_recorder
 - legacy_type.builtin:python_module
@@ -9,7 +9,7 @@ associations:
 - bases:
   - legacy_type.import_recorder:import_recorder
   key:
-  - builtin_service:pyobj_creg
+  - builtins:pyobj_creg.service
   - legacy_type.import_recorder:import_recorder
   value: ImportRecorder
 
@@ -20,7 +20,7 @@ definitions:
     module_name: import_recorder
     file_name: import_recorder.dyn.py
     import_list:
-      services.pyobj_creg: builtin_service:pyobj_creg
+      services.pyobj_creg: builtins:pyobj_creg.service
 
   ImportRecorder:
     _type: legacy_type.builtin:attribute
