--- a/hyperapp/rc/rc.resources.yaml
+++ b/hyperapp/rc/rc.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- builtin_service:hyperapp_dir
+- builtins:hyperapp_dir.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - rc.process_pool:process_pool.module
@@ -12,7 +12,7 @@ definitions:
     module_name: rc
     file_name: rc.dyn.py
     import_list:
-      services.hyperapp_dir: builtin_service:hyperapp_dir
+      services.hyperapp_dir: builtins:hyperapp_dir.service
       code.source_collector_task: rc.source_collector_task:source_collector_task.module
       code.process_pool: rc.process_pool:process_pool.module
 
