--- a/hyperapp/rc/source_collector_task.resources.yaml
+++ b/hyperapp/rc/source_collector_task.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- builtin_service:builtin_services
+- builtins:builtin_services.service
 - legacy_type.builtin:python_module
 - rc.dep:dep.module
 - rc.custom_resource_registry:custom_resource_registry.module
@@ -13,7 +13,7 @@ definitions:
     module_name: source_collector_task
     file_name: source_collector_task.dyn.py
     import_list:
-      services.builtin_services: builtin_service:builtin_services
+      services.builtin_services: builtins:builtin_services.service
       code.custom_resource_registry: rc.custom_resource_registry:custom_resource_registry.module
       code.builtins_unit: rc.builtins_unit:builtins_unit.module
       code.dep: rc.dep:dep.module
