--- a/hyperapp/rc/source_file_unit.resources.yaml
+++ b/hyperapp/rc/source_file_unit.resources.yaml
@@ -1,7 +1,7 @@
 import:
-- builtin_service:mosaic
-- builtin_service:resource_module_factory
-- builtin_service:web
+- builtins:mosaic.service
+- builtins:resource_module_factory.service
+- builtins:web.service
 - legacy_type.attr_constructors:service
 - legacy_type.builtin:python_module
 - legacy_type.rc:source_dep
@@ -20,8 +20,8 @@ definitions:
       htypes.builtin.python_module: legacy_type.builtin:python_module
       htypes.rc.source_dep: legacy_type.rc:source_dep
       htypes.rc.module_deps: legacy_type.rc:module_deps
-      services.mosaic: builtin_service:mosaic
-      services.resource_module_factory: builtin_service:resource_module_factory
-      services.web: builtin_service:web
+      services.mosaic: builtins:mosaic.service
+      services.resource_module_factory: builtins:resource_module_factory.service
+      services.web: builtins:web.service
       code.dep: rc.dep:dep.module
       code.import_task: rc.import_task:import_task.module
