--- a/hyperapp/resource/partial.resources.yaml
+++ b/hyperapp/resource/partial.resources.yaml
@@ -1,5 +1,5 @@
 import:
-- builtin_service:pyobj_creg
+- builtins:pyobj_creg.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.partial:partial
@@ -9,7 +9,7 @@ associations:
 - bases:
   - legacy_type.partial:partial
   key:
-  - builtin_service:pyobj_creg
+  - builtins:pyobj_creg.service
   - legacy_type.partial:partial
   value: python_object
 
@@ -19,7 +19,7 @@ definitions:
     module_name: partial
     file_name: partial.dyn.py
     import_list:
-      services.pyobj_creg: builtin_service:pyobj_creg
+      services.pyobj_creg: builtins:pyobj_creg.service
   python_object:
     _type: legacy_type.builtin:attribute
     object: partial.module
