--- a/hyperapp/resource/raw.resources.yaml
+++ b/hyperapp/resource/raw.resources.yaml
@@ -1,6 +1,6 @@
 import:
-- builtin_service:pyobj_creg
-- builtin_service:web
+- builtins:pyobj_creg.service
+- builtins:web.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.raw:raw
@@ -10,7 +10,7 @@ associations:
 - bases:
   - legacy_type.raw:raw
   key:
-  - builtin_service:pyobj_creg
+  - builtins:pyobj_creg.service
   - legacy_type.raw:raw
   value: python_object
 
@@ -20,7 +20,7 @@ definitions:
     module_name: raw
     file_name: raw.dyn.py
     import_list:
-      services.web: builtin_service:web
+      services.web: builtins:web.service
   python_object:
     _type: legacy_type.builtin:attribute
     object: raw.module
