--- a/hyperapp/resource/test/test_set_partial.expected.yaml
+++ b/hyperapp/resource/test/test_set_partial.expected.yaml
@@ -1,6 +1,6 @@
 import:
-- builtin_service:mosaic
-- builtin_service:web
+- builtins:mosaic.service
+- builtins:web.service
 - legacy_type.builtin:attribute
 - legacy_type.partial:partial
 - sample_module_2:sample_module_2.module
@@ -14,5 +14,5 @@ definitions:
     _type: legacy_type.partial:partial
     function: sample_servant_2
     params:
-      mosaic: builtin_service:mosaic
-      web: builtin_service:web
+      mosaic: builtins:mosaic.service
+      web: builtins:web.service
