--- a/hyperapp/rpc/rpc_call.resources.yaml
+++ b/hyperapp/rpc/rpc_call.resources.yaml
@@ -1,8 +1,8 @@
 # Automatically generated file. Do not edit.
 
 import:
-- builtin_service:mosaic
-- builtin_service:types
+- builtins:mosaic.service
+- builtins:types.service
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
@@ -22,9 +22,9 @@ definitions:
       htypes.rpc.request: legacy_type.rpc:request
       htypes.rpc.server_error: legacy_type.rpc:server_error
       services.mark: common.mark:mark.service
-      services.mosaic: builtin_service:mosaic
+      services.mosaic: builtins:mosaic.service
       services.transport: transport.transport:transport.service
-      services.types: builtin_service:types
+      services.types: builtins:types.service
   rpc_call_factory:
     _type: legacy_type.builtin:attribute
     object: rpc_call.module
