--- a/hyperapp/subprocess/subprocess_rpc_server_main.resources.yaml
+++ b/hyperapp/subprocess/subprocess_rpc_server_main.resources.yaml
@@ -1,8 +1,8 @@
 # Automatically generated file. Do not edit.
 
 import:
-- builtin_service:mosaic
-- builtin_service:stop_signal
+- builtins:mosaic.service
+- builtins:stop_signal.service
 - legacy_type.builtin:python_module
 - rpc.rpc_call:rpc_call_factory.service
 - rpc.rpc_endpoint:rpc_endpoint_factory.service
@@ -23,9 +23,9 @@ definitions:
       services.add_subprocess_server_connection: subprocess.subprocess_transport:add_subprocess_server_connection.service
       services.endpoint_registry: transport.endpoint:endpoint_registry.service
       services.generate_rsa_identity: transport.rsa_identity:generate_rsa_identity.service
-      services.mosaic: builtin_service:mosaic
+      services.mosaic: builtins:mosaic.service
       services.peer_registry: transport.identity:peer_registry.service
       services.route_table: transport.sync_route_table:route_table.service
       services.rpc_call_factory: rpc.rpc_call:rpc_call_factory.service
       services.rpc_endpoint_factory: rpc.rpc_endpoint:rpc_endpoint_factory.service
-      services.stop_signal: builtin_service:stop_signal
+      services.stop_signal: builtins:stop_signal.service
