--- a/hyperapp/transport/route_table.resources.yaml
+++ b/hyperapp/transport/route_table.resources.yaml
@@ -1,6 +1,6 @@
 import:
-- builtin_service:association_reg
-- builtin_service:web
+- builtins:association_reg.service
+- builtins:web.service
 - legacy_type.builtin:python_module
 
 definitions:
@@ -9,5 +9,5 @@ definitions:
     module_name: route_table
     file_name: route_table.dyn.py
     import_list:
-      services.association_reg: builtin_service:association_reg
-      services.web: builtin_service:web
+      services.association_reg: builtins:association_reg.service
+      services.web: builtins:web.service
