--- a/hyperapp/ui/qt/window.fixtures.resources.yaml
+++ b/hyperapp/ui/qt/window.fixtures.resources.yaml
@@ -1,7 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
-- builtin_service:mosaic
+- builtins:mosaic.service
 - common.mark:mark.service
 - legacy_type.builtin:python_module
 associations: []
@@ -12,4 +12,4 @@ definitions:
     file_name: window.fixtures.dyn.py
     import_list:
       services.mark: common.mark:mark.service
-      services.mosaic: builtin_service:mosaic
+      services.mosaic: builtins:mosaic.service
