--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -1,7 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
-- builtin_service:web
+- builtins:web.service
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
@@ -52,4 +52,4 @@ definitions:
       htypes.window.state: legacy_type.window:state
       services.mark: common.mark:mark.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
-      services.web: builtin_service:web
+      services.web: builtins:web.service
