--- a/hyperapp/rc/collector_task.resources.yaml
+++ b/hyperapp/rc/collector_task.resources.yaml
@@ -6,10 +6,10 @@ import:
 
 definitions:
 
-  source_collector_task.module:
+  collector_task.module:
     _type: legacy_type.builtin:python_module
-    module_name: source_collector_task
-    file_name: source_collector_task.dyn.py
+    module_name: collector_task
+    file_name: collector_task.dyn.py
     import_list:
       code.custom_resource_registry: rc.custom_resource_registry:custom_resource_registry.module
       code.builtins_unit: rc.builtins_unit:builtins_unit.module
