--- a/hyperapp/rc/collector_task.resources.yaml
+++ b/hyperapp/rc/collector_task.resources.yaml
@@ -2,7 +2,7 @@ import:
 - legacy_type.builtin:python_module
 - rc.custom_resource_registry:custom_resource_registry.module
 - rc.builtins_unit:builtins_unit.module
-- rc.source_file_unit:source_file_unit.module
+- rc.unit:unit.module
 
 definitions:
 
@@ -13,4 +13,4 @@ definitions:
     import_list:
       code.custom_resource_registry: rc.custom_resource_registry:custom_resource_registry.module
       code.builtins_unit: rc.builtins_unit:builtins_unit.module
-      code.source_file_unit: rc.source_file_unit:source_file_unit.module
+      code.unit: rc.unit:unit.module
