--- a/hyperapp/rc/unit.resources.yaml
+++ b/hyperapp/rc/unit.resources.yaml
@@ -4,6 +4,7 @@ import:
 - builtins:web.service
 - legacy_type.attr_constructors:service
 - legacy_type.builtin:python_module
+- legacy_type.inspect:fn_attr
 - legacy_type.rc:source_dep
 - legacy_type.rc:module_deps
 - rc.dep:dep.module
@@ -18,6 +19,7 @@ definitions:
     import_list:
       htypes.attr_constructors.service: legacy_type.attr_constructors:service
       htypes.builtin.python_module: legacy_type.builtin:python_module
+      htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.rc.source_dep: legacy_type.rc:source_dep
       htypes.rc.module_deps: legacy_type.rc:module_deps
       services.mosaic: builtins:mosaic.service
