--- a/hyperapp/rc/import_task.resources.yaml
+++ b/hyperapp/rc/import_task.resources.yaml
@@ -1,12 +1,14 @@
 import:
 - builtins:mosaic.service
 - builtins:web.service
+- legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.builtin:import_rec
 - legacy_type.import_discoverer:import_discoverer
 - legacy_type.import_discoverer:using_incomplete_object
 - legacy_type.import_recorder:import_recorder
 - legacy_type.import_recorder:resource
+- rc.call_driver:call_driver.module
 - rc.import_driver:import_driver.module
 
 definitions:
@@ -16,6 +18,7 @@ definitions:
     module_name: import_task
     file_name: import_task.dyn.py
     import_list:
+      htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.builtin.import_rec: legacy_type.builtin:import_rec
       htypes.import_discoverer.import_discoverer: legacy_type.import_discoverer:import_discoverer
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
@@ -23,4 +26,5 @@ definitions:
       htypes.import_recorder.resource: legacy_type.import_recorder:resource
       services.mosaic: builtins:mosaic.service
       services.web: builtins:web.service
+      code.call_driver: rc.call_driver:call_driver.module
       code.import_driver: rc.import_driver:import_driver.module
