--- a/hyperapp/rc/import_driver.resources.yaml
+++ b/hyperapp/rc/import_driver.resources.yaml
@@ -6,8 +6,8 @@ import:
 - legacy_type.inspect:fn_attr
 - legacy_type.inspect:generator_fn_attr
 - legacy_type.inspect:imported_module_info
-- legacy_type.inspect:module_imports
 - resource.constants:constants.module
+- rc.driver_recorders:driver_recorders.module
 
 definitions:
 
@@ -20,7 +20,7 @@ definitions:
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.generator_fn_attr: legacy_type.inspect:generator_fn_attr
       htypes.inspect.imported_module_info: legacy_type.inspect:imported_module_info
-      htypes.inspect.module_imports: legacy_type.inspect:module_imports
       services.mosaic: builtins:mosaic.service
       services.pyobj_creg: builtins:pyobj_creg.service
       code.constants: resource.constants:constants.module
+      code.driver_recorders: rc.driver_recorders:driver_recorders.module
