--- a/hyperapp/rc/call_driver.resources.yaml
+++ b/hyperapp/rc/call_driver.resources.yaml
@@ -3,6 +3,7 @@ import:
 - builtins:pyobj_creg.service
 - legacy_type.builtin:python_module
 - legacy_type.inspect:object_type_info
+- rc.driver_recorders:driver_recorders.module
 - rc.tracer:tracer.module
 
 definitions:
@@ -15,4 +16,5 @@ definitions:
       htypes.inspect.object_type_info: legacy_type.inspect:object_type_info
       services.mosaic: builtins:mosaic.service
       services.pyobj_creg: builtins:pyobj_creg.service
+      code.driver_recorders: rc.driver_recorders:driver_recorders.module
       code.tracer: rc.tracer:tracer.module
