--- a/hyperapp/rc/rc.resources.yaml
+++ b/hyperapp/rc/rc.resources.yaml
@@ -3,7 +3,7 @@ import:
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - rc.process_pool:process_pool.module
-- rc.collector_task:collector_task.module
+- rc.collector:collector.module
 
 definitions:
 
@@ -13,7 +13,7 @@ definitions:
     file_name: rc.dyn.py
     import_list:
       services.hyperapp_dir: builtins:hyperapp_dir.service
-      code.collector_task: rc.collector_task:collector_task.module
+      code.collector: rc.collector:collector.module
       code.process_pool: rc.process_pool:process_pool.module
 
   compile_resources:
