--- a/hyperapp/rc/unit.resources.yaml
+++ b/hyperapp/rc/unit.resources.yaml
@@ -4,6 +4,7 @@ import:
 - builtins:web.service
 - legacy_type.attr_constructors:service
 - legacy_type.builtin:python_module
+- legacy_type.import_discoverer:using_incomplete_object
 - legacy_type.inspect:fn_attr
 - legacy_type.inspect:import_recorder
 - legacy_type.rc:source_dep
@@ -22,6 +23,7 @@ definitions:
     import_list:
       htypes.attr_constructors.service: legacy_type.attr_constructors:service
       htypes.builtin.python_module: legacy_type.builtin:python_module
+      htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.import_recorder: legacy_type.inspect:import_recorder
       htypes.rc.source_dep: legacy_type.rc:source_dep
