--- a/hyperapp/rc/process_pool.resources.yaml
+++ b/hyperapp/rc/process_pool.resources.yaml
@@ -1,5 +1,6 @@
 import:
 - legacy_type.builtin:python_module
+- legacy_type.rpc:server_error
 - rpc.rpc_endpoint:rpc_endpoint_factory.service
 - transport.endpoint:endpoint_registry.service
 - transport.rsa_identity:generate_rsa_identity.service
@@ -12,6 +13,7 @@ definitions:
     module_name: process_pool
     file_name: process_pool.dyn.py
     import_list:
+      htypes.rpc.server_error: legacy_type.rpc:server_error
       services.endpoint_registry: transport.endpoint:endpoint_registry.service
       services.generate_rsa_identity: transport.rsa_identity:generate_rsa_identity.service
       services.rpc_endpoint_factory: rpc.rpc_endpoint:rpc_endpoint_factory.service
