--- a/hyperapp/rc/unit.resources.yaml
+++ b/hyperapp/rc/unit.resources.yaml
@@ -13,6 +13,7 @@ import:
 - rc.dep:dep.module
 - rc.import_driver:import_driver.module
 - rc.scaffolds:scaffolds.module
+- rc.test_driver:test_driver.module
 
 definitions:
 
@@ -35,3 +36,4 @@ definitions:
       code.dep: rc.dep:dep.module
       code.import_driver: rc.import_driver:import_driver.module
       code.scaffolds: rc.scaffolds:scaffolds.module
+      code.test_driver: rc.test_driver:test_driver.module
