Tests: Pass tested services to driver

--- a/hyperapp/rc/scaffolds.resources.yaml
+++ b/hyperapp/rc/scaffolds.resources.yaml
@@ -4,6 +4,7 @@ import:
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
 - legacy_type.builtin:import_rec
+- legacy_type.inspect:field
 - legacy_type.import_discoverer:import_discoverer
 - legacy_type.import_recorder:import_recorder
 - legacy_type.import_recorder:resource
@@ -22,6 +23,7 @@ definitions:
       htypes.builtin.attribute: legacy_type.builtin:attribute
       htypes.builtin.call: legacy_type.builtin:call
       htypes.builtin.import_rec: legacy_type.builtin:import_rec
+      htypes.inspect.field: legacy_type.inspect:field
       htypes.import_discoverer.import_discoverer: legacy_type.import_discoverer:import_discoverer
       htypes.import_recorder.import_recorder: legacy_type.import_recorder:import_recorder
       htypes.import_recorder.resource: legacy_type.import_recorder:resource
